--- a/xfitter_config_for_fit/parameters.yaml
+++ b/xfitter_config_for_fit/parameters.yaml
@@ -127,7 +127,7 @@ Profiler:
   WriteTheo: "Asymmetric"            # Can be "Off", "On" or "Asymmetric" (to store asymmetric variations)
   getChi2: "On"              # determine and report chi2 for each variation
 
-OutputDirectory: "LHeC_Simulated_Data_HERAPDF20_NNLO_ALPHAS_118" #Can be omitted, default is "output"
+OutputDirectory: "Fit_Results" #Can be omitted, default is "output"
 
 WriteLHAPDF6:
   name: "proton"
