--- a/xfitter_config_for_fit/parameters.yaml
+++ b/xfitter_config_for_fit/parameters.yaml
@@ -7,20 +7,14 @@ MINUIT:
     migrad
     hesse
     call fcn 3
-
+    
   doErrors :  Hesse # None
-
-CERES:
-  offset: 2
-  tolerance: 1e-5
-  strategy: 0
-  covariance: 1
 
 Parameters:
   Ag   :  DEPENDENT
   Bg   : [ -0.061953, 0.27 ]
   Cg   : [  5.562367,  0.32 ]
-  Agp  : [ 0.166087, 0.01 ]  # negative gluon ....
+  Agp  : [ 0.07311, 0.01 ]  # negative gluon ....
   Bgp  : [ -0.383100, 0.01 ]
   Cgp  : [ 25.0, 0.]  # fix C of negative gluon
   Auv  :  DEPENDENT
@@ -40,6 +34,10 @@ Parameters:
   Cdbar: # another example of providing value, step etc.
     value: 9.586246
     step: 1.2345
+    #min
+    #max
+    #pr_mean
+    #pr_sigma
   ZERO : [ 0. ]          # zero
   fs   :   0.4   #no step means fixed
   DbarToS: "=fs/(1-fs)"
@@ -64,6 +62,16 @@ Parameterisations:
   par_g:
     class: NegativeGluon
     parameters: [Ag,Bg,Cg,ZERO,ZERO,Agp,Bgp,Cgp]
+  #par_s:
+    #class: HERAPDF
+    #parameters: [As,Bs,Cs]
+  #par_s:
+    #class: Expression
+    #expression: "Adbar*fs/(1-fs)*(x^Bdbar*(1-x)^Cdbar)"
+  # Another example for Expression parameterisation
+  #par_g:
+    #class: Expression
+    #expression: "Ag*(x^Bg*(1-x)^Cg-Agp*x^Bgp*(1-x)^Cgp)"
 
 DefaultDecomposition: proton
 Decompositions:
@@ -76,28 +84,40 @@ Decompositions:
     xs: par_s
     xg: par_g
 
+#DefaultEvolution: proton-APFELff
 DefaultEvolution: proton-QCDNUM
+#DefaultEvolution: proton-LHAPDF
 
 Evolutions:
+  #proton-APFELff:
+    #? !include evolutions/APFEL.yaml
+    #decomposition: proton
   proton-QCDNUM:
     ? !include evolutions/QCDNUM.yaml
     decomposition: proton #this could be omitted, as the default decomposition is set
     # The following allows QCDNUM to read PDFs from other evolutions:
-    EvolutionCopy: "proton-LHAPDF"
+    #EvolutionCopy: "proton-LHAPDF"
   proton-LHAPDF:
     class: LHAPDF
     set: "HERAPDF20_NNLO_ALPHAS_118"
+    #set: "CT10nlo"
     member: 0
+#  proton-APFEL:
+#    ? !include evolutions/APFELxx.yaml
+#    decomposition: proton
+  antiproton:
+    class: FlipCharge
+    #input: proton-QCDNUM
+    input: proton-LHAPDF
+#  neutron:
+#    class: FlipUD
+#    input: proton-QCDNUM
 
-# QCD parameters
-Order: NNLO
-NFlavour: 5
-isFFNS: 0
 Q0 : 1.378404875209 # Initial scale =sqrt(1.9)
-alphas : 0.118
+
 ? !include constants.yaml
 
-
+alphas : 0.118
 
 byReaction:
   # RT DIS scheme settings:
@@ -105,29 +125,69 @@ byReaction:
     ? !include reactions/RT_DISNC.yaml
     # uncomment if defaultEvolution is not QCDNUM: RT_DISNC works with QCDNUM only, use EvolutionCopy
     #evolution: proton-QCDNUM
+  # uncomment if defaultEvolution is not QCDNUM: RT_DISNC works with QCDNUM only, use EvolutionCopy
+  #BaseDISCC:
+  #  evolution: proton-QCDNUM
+  # FONLL scheme settings:
+  FONLL_DISNC:
+    ? !include reactions/FONLL_DISNC.yaml
+  FONLL_DISCC:
+    ? !include reactions/FONLL_DISCC.yaml
+  # FF ABM scheme settings:
+  FFABM_DISNC:
+    ? !include reactions/FFABM_DISNC.yaml
+  FFABM_DISCC:
+    ? !include reactions/FFABM_DISCC.yaml
+  # AFB settings:
+  AFB:
+    ? !include reactions/AFB.yaml
+  # APPLgrid settings:
+  APPLgrid:
+    ? !include reactions/APPLgrid.yaml
+  # APPLgrid settings:
+  APFELgrid:
+    ? !include reactions/APFELgrid.yaml
+  # (optional) Fractal module settings:
+  Fractal_DISNC:
+    ? !include reactions/Fractal_DISNC.yaml
+
+#byDataset: #Here one can redefine some parameters for specific datasets
+#  #Parameter definitions here have the highest priority: they override both "byReaction" and "TermInfo"
+#  "HERA1+2 NCep 920":
+#    epolarity: 2
 
 # Specify HF scheme used for DIS NC processes:
 hf_scheme_DISNC :
   defaultValue : 'RT_DISNC'        # global specification
+#  defaultValue : 'BaseDISNC'       # global specification
+#  defaultValue : 'FONLL_DISNC'     # global specification
+#  defaultValue : 'FFABM_DISNC'
+#  'HERA1+2 NCep 920' : 'BaseDISNC' # datafile specific (based on name)
+#  1 : BaseDISNC
+#  'HERA1+2 NCep 920' : 'Fractal_DISNC'  # Fractal model. Add parameters file if you want to try it (see above)
 
 # Specify HF scheme used for DIS CC processes:
 hf_scheme_DISCC :
   defaultValue : 'BaseDISCC'       # global specification
+#  defaultValue : 'FONLL_DISCC'     # global specification
+#  defaultValue : 'FFABM_DISCC'     # global specification
 
 #
 # Profiler allows to add variations of parameters and PDF eigenvectors as additional nuisance parameters
 #
 Profiler:
-  Evolutions:
-    proton-LHAPDF:
-      sets: [HERAPDF20_NNLO_ALPHAS_118]
-      members: [0,1,end] # when omitted, default members is [0,1,end]
-      error_type_override: [hessian] # treat parametrisation variations (members 11-13 from HERAPDF20_NNLO_VAR) as symmetric hessian
-  Status: "On"               # "Off" to turn off profiler
-  WriteTheo: "Asymmetric"            # Can be "Off", "On" or "Asymmetric" (to store asymmetric variations)
-  getChi2: "On"              # determine and report chi2 for each variation
+  Parameters:
+    alphas: [ 0.118, 0.119, 0.117 ]  # central, up, (down) variation. If down is not given, uses symmetrizes Up variation 
+  #Evolutions:
+  #  proton-LHAPDF:
+  #    sets:    [CT10]
+  #    members: [[0,1,end]]
+  Status: "Off"                 # "Off" to turn off profiler
+  WriteTheo: "Off"              # Can be "Off", "On" or "Asymmetric" (to store asymmetric variations)
+  getChi2: "Off"                # determine and report chi2 for each variation
+  enableExternalProfiler: "Off" # enable creation of additional files, needed for xfitter draw
 
-OutputDirectory: "Fit_Results" #Can be omitted, default is "output"
+OutputDirectory: "LHeC_Fit" #Can be omitted, default is "output"
 
 WriteLHAPDF6:
   name: "proton"
