--- a/xfitter_config_for_pseudodata/constants.yaml
+++ b/xfitter_config_for_pseudodata/constants.yaml
@@ -37,8 +37,11 @@ mdn : 0.06983
 mst : 0.150
 
 # heavy quark masses:
-mch : 1.43
+mch : 1.43 
 mbt : 4.50
 mtp : 173.0
 
-
+# QCD parameters
+Order: NNLO
+NFlavour: 5
+isFFNS: 0 # 0 (default): VFNS with number of flavours changing from 3 to NFlavour, 1: FFNS with number of flavours = NFlavour at any scale
